--- a/src/app.html
+++ b/src/app.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
-    <link rel="stylesheet" href="%sveltekit.assets%/css/app.css" />
     <link
+      rel="preload"
       href="https://fonts.cdnfonts.com/css/hvdtrial-brandon-grotesque"
-      rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="preload"
+      as="image"
+      href="/images/tariff-hike.webp"
+      type="image/webp"
+    />
+    <link rel="stylesheet" href="%sveltekit.assets%/css/app.css" />
+    <title>6 Reasons to Switch to Tariff-Free Sheets | Case Study</title>
+    <meta
+      name="description"
+      content="Discover why tariff-free, NASA-inspired sheets are the best choice for a cooler, cleaner night's sleep—without luxury markups."
+    />
+    <meta
+      name="keywords"
+      content="cooling sheets, luxury bedding, NASA fabric, night sweats, breathable sheets, tariff-free bedding"
+    />
+    <meta name="author" content="Novus Studio" />
+
+    <!-- Mobile scaling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph (for social previews) -->
+    <meta
+      property="og:title"
+      content="6 Reasons Tariff-Free Sheets Beat Luxury Brands"
+    />
+    <meta
+      property="og:description"
+      content="NASA cooling, silver-infused freshness, and zero tariff markup. See why these sheets are redefining comfort."
+    />
+    <meta
+      property="og:image"
+      content="https://novus-studio-sveltekit.vercel.app/images/hero-woman.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://novus-studio-sveltekit.vercel.app"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="6 Reasons Tariff-Free Sheets Beat Luxury Brands"
+    />
+    <meta
+      name="twitter:description"
+      content="NASA cooling, silver-infused freshness, and zero tariff markup. See why these sheets are redefining comfort."
+    />
+    <meta
+      name="twitter:image"
+      content="https://novus-studio-sveltekit.vercel.app/images/hero-woman.webp"
+    />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
