--- a/src/app.html
+++ b/src/app.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
     <link
-      rel="preload"
+      rel="stylesheet"
       href="https://fonts.cdnfonts.com/css/hvdtrial-brandon-grotesque"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preload"
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     />
     <link
@@ -20,6 +20,7 @@
     />
     <link rel="stylesheet" href="%sveltekit.assets%/css/app.css" />
     <title>6 Reasons to Switch to Tariff-Free Sheets | Case Study</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta
       name="description"
       content="Discover why tariff-free, NASA-inspired sheets are the best choice for a cooler, cleaner night's sleep—without luxury markups."
